@@ -4,7 +4,8 @@
 =======================================================
 
 
-17 Nov 2006      test10 made less computationally expensive. (AF)
+17 Nov 2006      test10 made less computationally expensive. 
+                 indexx.f90 removed since no longer used. (AF)
 
 11 Nov 2006      configure fixed; internal lapack and atlas libs updated according to 
                  the philosophy of quantum-espresso. Few changes in blc2wan.f90 . (AF)
